--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 \input{classicthesis-config}
 \usepackage{xcolor}
 \newcommand{\cacho}{\textcolor{red}}
+\usepackage{tikz}
+\usepackage{multirow}
+\usepackage{underscore}
 
 \titleformat{\paragraph}[runin]
 {\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
